Fix full width overflow

--- a/styles/global.css
+++ b/styles/global.css
@@ -3,10 +3,6 @@
 @tailwind utilities;
 @tailwind screens;
 
-html,
-body {
-    width: 100vw !important;
-}
 @layer base {
     html {
         scroll-behavior: smooth;
